# ebi-sources

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yaml
pt_br/opex/: Cargo.toml
pt_br/opex/examples/: manga_info.rs
pt_br/opex/src/: client.rs  lib.rs
pt_br/opex/src/parser/: chapter.rs  manga.rs
pt_br/yabu/: Cargo.toml
pt_br/yabu/src/: lib.rs
