[package]
name = "opex"
version = "0.1.0"
edition = "2021"

[lib]
name = "opex"
crate-type=["dylib"]

[dependencies]
anyhow = "1.0.68"
reqwest = { version = "0.11" }

ebi_source = { git = "ssh://git@github.com/jansen44/ebi.git" }
ebi_source_macros = { git = "ssh://git@github.com/jansen44/ebi.git" }
