[package]
name = "opex"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "opex"
crate-type=["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
scraper = "0.14"
ureq = "2.6"

ebi_source = { git = "ssh://git@github.com/jansen44/ebi.git" }
ebi_source_macros = { git = "ssh://git@github.com/jansen44/ebi.git" }
